[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mkdocs-biel"
authors = [{name = "TechDocs Studio", email = "info@techdocs.studio"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = ["mkdocs>=1.4"]
keywords = [
    "mkdocs",
    "mkdocs-plugin",
    "ai",
    "chatbot",
    "search",
    "documentation",
    "ask-ai",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/TechDocsStudio/mkdocs-biel"
Documentation = "https://docs.biel.ai/installation/mkdocs"

[project.entry-points."mkdocs.plugins"]
biel = "mkdocs_biel.plugin:BielPlugin"

[tool.flit.module]
name = "mkdocs_biel"
